# actividad4_aplicaciones1_mia

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.run/: CLI Ingest.run.xml  Dash Server.run.xml  PyTests.run.xml
assets/: style.css
data/processed/: mortalidad_2019.parquet
src/mortalidad/: __init__.py  app.py  callbacks.py  cli.py  config.py  data_loader.py  layout.py  logging.py
src/mortalidad/components/: bars.py  hist.py  lines.py  map.py  pie.py  stacked.py  table.py
src/mortalidad/utils/: geo.py
src/mortalidad_colombia_2019.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_app.py  test_callbacks.py  test_cli.py  test_components.py  test_data_loader.py  test_import.py
