[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mortalidad-colombia-2019"
version = "0.1.0"
description = "Visualización interactiva de datos de mortalidad en Colombia para 2019."
authors = [{ name = "Equipo mortalidad-colombia-2019" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "dash>=2.14.0",
    "Flask-Caching>=2.0.2",
    "gunicorn>=21.2.0",
    "openpyxl>=3.1.2",
    "pandera>=0.17.0",
    "pandas>=2.1.0",
    "pyarrow>=15.0.0",
    "pydantic-settings>=2.0.3",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "black>=24.3.0",
    "isort>=5.12.0",
    "pre-commit>=3.6.0",
    "types-python-dateutil",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mortalidad*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ANN", "DTZ", "PIE"]
ignore = ["ANN101", "ANN102"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypyc = false
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["dash", "dash.*", "plotly", "plotly.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "flask_caching", "flask_caching.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mortalidad.callbacks"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
